@@ -76,7 +76,7 @@ class FontMakingUtility {
 			$gifObjArray[$ic . '0.']['maxWidth'] = $width;
 			$gifObjArray[$ic . '0.']['offset'] = (($ic-1) * $width + $hOffset) . ',' . $vertOffset;
 		}
-		$objectManager = new \TYPO3\CMS\Extbase\Object\ObjectManager();
+		$objectManager = \TYPO3\CMS\Core\Utility\GeneralUtility::makeInstance('TYPO3\\CMS\\Extbase\\Object\\ObjectManager');
 		$gifCreator = $objectManager->create('SJBR\\SrFreecap\\Utility\\GifBuilderUtility');
 		$gifCreator->init();
 		if ($GLOBALS['TYPO3_CONF_VARS']['GFX']['gdlib']) {
