@@ -171,7 +171,7 @@ class ShowPng implements \TYPO3\CMS\Extbase\MVC\View\ViewInterface {
 				$this->word->setWordCypher(array());
 				$this->word->setHashFunction('');
 				// Get an instance of the word repository
-				$objectManager = new \TYPO3\CMS\Extbase\Object\ObjectManager();
+				$objectManager = \TYPO3\CMS\Core\Utility\GeneralUtility::makeInstance('TYPO3\\CMS\\Extbase\\Object\\ObjectManager');
 				$wordRepository = $objectManager->get('SJBR\\SrFreecap\\Domain\\Repository\\WordRepository');
 				// Reset the word
 				$wordRepository->setWord($this->word);
